# liquidation-trading

./: .env.example  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
chart/: serializers.py  urls.py  views.py
chart/static/chart/css/: home.css
chart/static/chart/js/: home.js
chart/templates/chart/: home.html
chart/tests/: test_views.py
core/: settings.py  urls.py
data/: admin.py
data/controllers/: __init__.py  binance_candles.py  binance_funding_rate.py  binance_klines_archive.py  binance_metrics_archive.py  binance_open_interest.py
data/management/commands/: backfill_binance_candles.py  backfill_binance_open_interest.py  fetch_binance_candles.py  fetch_binance_funding_rate.py  fetch_binance_open_interest.py
data/migrations/: 0001_initial.py  0002_alter_candle_interval_alter_candle_symbol.py  0003_alter_candle_interval_alter_candle_symbol.py  0004_openinterest.py  0005_fundingrate.py  0006_candle_delta.py  0007_clustersegment.py  0008_clustersegment_lookback_hours.py
data/models/: __init__.py  candle.py  choices.py  cluster_segment.py  funding_rate.py  open_interest.py
docs/: liquidation_framework_concept.md
feature/: admin.py  apps.py  signals.py
feature/controllers/: __init__.py  cluster_identifier.py  cvd.py  oi_aggregator.py  refresh.py
feature/migrations/: 0001_initial.py  0002_delete_cumulativevolumedelta.py
feature/models/: __init__.py
feature/services/: __init__.py  clustering.py  delta.py  oi.py
feature/tests/: test_cluster_identifier.py  test_clustering.py
