[tool.poetry]
name = "liquidation-trading"
version = "0.1.0"
description = "Django project for liquidation-based trading research and tooling."
authors = ["Pouria"]
readme = "README.md"
packages = [
    { include = "core" },
    { include = "data" },
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
psycopg = { version = "^3.2", extras = ["binary"] }
redis = "^5.0"
requests = "^2.33.1"
pandas = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"
black = "^26.3.1"
ruff = "^0.15.12"
pytest = "^8.3.0"
pytest-django = "^4.9.0"

[tool.pytest.ini_options]
# The cluster math module (`feature/services/clustering.py`) is
# intentionally Django-free, so the existing tests run without bootstrapping
# the ORM. Setting DJANGO_SETTINGS_MODULE here keeps future controller-level
# tests one decorator away — pytest-django will lazy-bootstrap Django on
# tests marked `@pytest.mark.django_db` without disturbing the pure tests.
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py"]
testpaths = ["feature/tests", "chart/tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
